--- a/public/css/main.css
+++ b/public/css/main.css
@@ -841,3 +841,20 @@ a:hover {
   margin-left: 30px;
   width: 1000px;
 }
+
+.popup-message {
+  position: fixed;
+  width: 300px;
+  height: 70px;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
+  display: none;
+  color: black;
+  background-color: aliceblue;
+  transform: translate(-50%, -50%);
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
