--- a/public/css/main.css
+++ b/public/css/main.css
@@ -842,6 +842,31 @@ a:hover {
   width: 1000px;
 }
 
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-5px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(5px);
+  }
+}
+.shake {
+  animation: shake 0.6s;
+}
+
 .popup-message {
   position: fixed;
   width: 300px;
