--- a/public/css/main.css
+++ b/public/css/main.css
@@ -734,6 +734,7 @@ a:hover {
 .film-details__user-rating-score {
   position: relative;
   padding-top: 50px;
+  text-align: center;
 }
 .film-details__user-rating-score::before {
   position: absolute;
